--- a/app/src/main/res/drawable/icon_logo.xml
+++ b/app/src/main/res/drawable/icon_logo.xml
@@ -1,12 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-  <path
-      android:pathData="M894.98,277.5L527.36,68.61c-4.1,-2.56 -9.73,-4.1 -14.85,-4.1 -5.63,0 -10.75,1.54 -15.36,4.1L129.54,277.5c-9.22,5.12 -14.85,14.85 -14.85,25.6v417.79c0,10.75 5.63,20.48 14.85,25.6l367.62,208.9c4.61,2.56 9.73,4.1 14.85,4.1s10.75,-1.54 15.36,-4.1l367.62,-208.9c9.22,-5.12 14.85,-14.85 14.85,-25.6L909.82,303.1c0,-11.26 -6.14,-20.48 -14.85,-25.6zM860.16,709.12l-348.16,197.63 -348.16,-197.63v-394.24l348.16,-197.63 348.16,197.63v394.24z"
-      android:fillColor="#FFCC00"/>
-  <path
-      android:pathData="M296.96,359.94c-11.78,-6.66 -27.14,-2.56 -33.79,9.22 -6.66,11.78 -2.56,27.14 9.22,33.79l214.53,122.37v282.11c0,13.82 11.26,25.09 25.09,25.09s25.09,-11.26 25.09,-25.09V527.36l214.53,-120.83c11.78,-6.66 16.38,-22.02 9.22,-33.79 -6.66,-11.78 -22.02,-16.38 -33.79,-9.22l-213.5,120.32c-0.51,-0.51 -1.02,-1.02 -1.54,-1.02l-215.04,-122.88z"
-      android:fillColor="#017AFF"/>
+<vector android:alpha="0.88" android:height="60dp"
+    android:viewportHeight="1024" android:viewportWidth="1024"
+    android:width="60dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#1296db" android:pathData="M0,0m146.29,0l731.43,0q146.29,0 146.29,146.29l0,731.43q0,146.29 -146.29,146.29l-731.43,0q-146.29,0 -146.29,-146.29l0,-731.43q0,-146.29 146.29,-146.29Z"/>
+    <path android:fillColor="#ffffff" android:pathData="M706.67,468.15l-222.68,-20.37V333.57a47.73,47.73 0,0 0,-95.45 0v247.19l-40.23,-70a63.63,63.63 0,0 0,-110.08 63.63l127.27,220.45a63.63,63.63 0,0 0,63.63 31.82h282.62a63.63,63.63 0,0 0,63.63 -57.89l18.29,-196.61a95.45,95.45 0,0 0,-86.86 -104.05z"/>
+    <path android:fillColor="#1afa29" android:pathData="M372.92,381.29a79.54,79.54 0,1 1,126.61 0l50.58,38.18a143.1,143.1 0,1 0,-228.1 -0.33z"/>
 </vector>
