--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.AddFriendActivity">
+    tools:context=".ui.activity.AddFriendActivity">
     <com.lchj.meet.widgets.HeaderBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
