--- a/app/src/main/res/layout/loyout_search_title_item.xml
+++ b/app/src/main/res/layout/loyout_search_title_item.xml
@@ -6,7 +6,7 @@
     android:background="@color/common_blue">
     <TextView
         android:id="@+id/mTvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center_vertical"
         android:paddingHorizontal="10dp"
