--- a/app/src/main/res/layout/loyout_search_title_item.xml
+++ b/app/src/main/res/layout/loyout_search_title_item.xml
@@ -2,15 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
+    android:orientation="horizontal"
     android:background="@color/common_blue">
     <TextView
         android:id="@+id/mTvTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:gravity="center_vertical"
         android:paddingHorizontal="10dp"
         android:textColor="@color/common_white"
         android:textSize="16sp"
         tools:text="111111111" />
+    <View
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
