--- a/app/src/main/res/layout/loyout_search_content_item.xml
+++ b/app/src/main/res/layout/loyout_search_content_item.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:layout_margin="5dp"
     android:gravity="center_vertical"
-    android:layout_height="50dp">
+    android:layout_height="80dp">
     <ImageView
         android:id="@+id/mIvUser"
+        android:layout_marginHorizontal="10dp"
         android:layout_width="wrap_content"
         android:src="@drawable/icon_star"
         android:layout_height="wrap_content"/>
@@ -19,7 +21,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_height="0dp">
             <TextView
                 android:id="@+id/mTvName"
                 android:layout_width="wrap_content"
@@ -37,8 +41,10 @@
             android:layout_marginHorizontal="10dp"
             android:layout_width="wrap_content"
             android:lines="1"
+            android:gravity="center_vertical"
             tools:text="1111111111"
-            android:layout_height="wrap_content"/>
+            android:layout_weight="1"
+            android:layout_height="0dp"/>
 
     </LinearLayout>
 
